Add or update index.html

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <link rel="stylesheet" href="/static/css/main.css?v1.4">
 <link rel="shortcut icon" href="/favicon.ico" />
 
-<link rel="canonical" href="https://zingplayvn.com" />
+<link rel="canonical" href="http://127.0.0.1:8000" />
 <meta property="og:locale" content="vi" />
 <meta property="og:type" content="website" />
 <meta property="og:title" content="ZingPlay VN" />
 <meta property="og:description" content="111" />
-<meta property="og:url" content="https://zingplayvn.com" />
+<meta property="og:url" content="http://127.0.0.1:8000" />
 <meta property="og:site_name" content="ZingPlay VN" />
 <meta name="twitter:card" content="summary_large_image" />
 <script type="application/ld+json">
@@ -25,43 +25,43 @@
     "@graph":[
         {
             "@type":"CollectionPage",
-            "@id":"https://zingplayvn.com",
-            "url":"https://zingplayvn.com",
+            "@id":"http://127.0.0.1:8000",
+            "url":"http://127.0.0.1:8000",
             "name":"ZingPlay VN",
             "isPartOf":{
-                "@id":"https://zingplayvn.com/#website"
+                "@id":"http://127.0.0.1:8000/#website"
             },
             "description":"111",
-            "breadcrumb":{"@id":"https://zingplayvn.com#breadcrumb"},
+            "breadcrumb":{"@id":"http://127.0.0.1:8000#breadcrumb"},
             "inLanguage":"vi"
         },
         {
             "@type":"BreadcrumbList",
-            "@id":"https://zingplayvn.com/#breadcrumb",
+            "@id":"http://127.0.0.1:8000/#breadcrumb",
             "itemListElement":[{"@type":"ListItem","position":1,"name":"Home"}]
         },
         {
             "@type":"WebSite",
-            "@id":"https://zingplayvn.com/#website",
-            "url":"https://zingplayvn.com",
+            "@id":"http://127.0.0.1:8000/#website",
+            "url":"http://127.0.0.1:8000",
             "name":"ZingPlay VN",
             "description":"111",
             "potentialAction":[
             {
                 "@type":"SearchAction",
-                "target":{"@type":"EntryPoint","urlTemplate":"https://zingplayvn.com/search?q={search_term_string}"},
+                "target":{"@type":"EntryPoint","urlTemplate":"http://127.0.0.1:8000/search?q={search_term_string}"},
                 "query-input":"required name=search_term_string"}],
                 "inLanguage":"vi"
         },
         {
             "@type": "SoftwareApplication",
             "isPartOf": {
-                "@id": "https://zingplayvn.com#webpage"
+                "@id": "http://127.0.0.1:8000#webpage"
             },
             "mainEntityOfPage": {
-                "@id": "https://zingplayvn.com#webpage"
+                "@id": "http://127.0.0.1:8000#webpage"
             },
-            "@id": "https://zingplayvn.com#article",
+            "@id": "http://127.0.0.1:8000#article",
             "headline": "ZingPlay VN",
             "inLanguage": "vi",
             "name": "ZingPlay VN",
@@ -574,11 +574,43 @@
     <div class="news-list">
         
         <div class="news-item">
+            <a href="/173035028012/" class="timg" style="background-image: url(/media/files/20241031/f2f81eb3-ced0-4d11-86f8-3c60ae32ec6e-3.webp);"></a>
+            <div class="news-content">
+                <h3><a href="/173035028012/">33333333333333333333</a></h3>
+                <p>333333333</p>
+                <span class="news-date">十月 31, 2024</span>
+            </div>
+        </div>
+        <div class="news-item">
+            <a href="/173034933611/" class="timg" style="background-image: url(/media/files/20241031/bede20a0-f5c6-494d-92d9-c19c8b9ffbe9-2.webp);"></a>
+            <div class="news-content">
+                <h3><a href="/173034933611/">122222222222222222222222</a></h3>
+                <p>1231231231231231312321 </p>
+                <span class="news-date">十月 31, 2024</span>
+            </div>
+        </div>
+        <div class="news-item">
+            <a href="/173034655010/" class="timg" style="background-image: url(/media/files/20241031/8ae3393f-9d45-4d44-be6c-e8ca125b3e3f-1.webp);"></a>
+            <div class="news-content">
+                <h3><a href="/173034655010/">定时测试</a></h3>
+                <p>111111111111222222222333333333334444444444</p>
+                <span class="news-date">十月 31, 2024</span>
+            </div>
+        </div>
+        <div class="news-item">
+            <a href="/17302822019/" class="timg" style="background-image: url(/media/files/20241030/dd303229-82d1-44c5-8c2f-ff578d0c0063-1.webp);"></a>
+            <div class="news-content">
+                <h3><a href="/17302822019/">test123111</a></h3>
+                <p>test123111test123111test123111test123111test123111test123111test123111test123111</p>
+                <span class="news-date">十月 30, 2024</span>
+            </div>
+        </div>
+        <div class="news-item">
             <a href="/1-1/" class="timg" style="background-image: url(/media/files/20241028/18c3b821-09e9-4d9d-b8f1-26e5bdee4217-1.webp);"></a>
             <div class="news-content">
                 <h3><a href="/1-1/">1111111111</a></h3>
                 <p>111111111</p>
-                <span class="news-date">Tháng 10 22, 2024</span>
+                <span class="news-date">十月 22, 2024</span>
             </div>
         </div>
         <div class="news-item">
@@ -586,7 +618,7 @@
             <div class="news-content">
                 <h3><a href="/123/">test 2</a></h3>
                 <p>test 2</p>
-                <span class="news-date">Tháng 10 22, 2024</span>
+                <span class="news-date">十月 22, 2024</span>
             </div>
         </div>
         <div class="news-item">
@@ -594,7 +626,7 @@
             <div class="news-content">
                 <h3><a href="/abc22/">abc22</a></h3>
                 <p>abc22</p>
-                <span class="news-date">Tháng 10 22, 2024</span>
+                <span class="news-date">十月 22, 2024</span>
             </div>
         </div>
         <div class="news-item">
@@ -602,7 +634,7 @@
             <div class="news-content">
                 <h3><a href="/5/">test1</a></h3>
                 <p>test1</p>
-                <span class="news-date">Tháng 10 22, 2024</span>
+                <span class="news-date">十月 22, 2024</span>
             </div>
         </div>
         <div class="news-item">
@@ -610,7 +642,7 @@
             <div class="news-content">
                 <h3><a href="/4/">333</a></h3>
                 <p>333333333</p>
-                <span class="news-date">Tháng 10 22, 2024</span>
+                <span class="news-date">十月 22, 2024</span>
             </div>
         </div>
         <div class="news-item">
@@ -618,15 +650,7 @@
             <div class="news-content">
                 <h3><a href="/2222/">2222</a></h3>
                 <p>22222</p>
-                <span class="news-date">Tháng 10 22, 2024</span>
-            </div>
-        </div>
-        <div class="news-item">
-            <a href="/1111/" class="timg" style="background-image: url(/media/error.png);"></a>
-            <div class="news-content">
-                <h3><a href="/1111/">1111111</a></h3>
-                <p>123123123123</p>
-                <span class="news-date">Tháng 10 22, 2024</span>
+                <span class="news-date">十月 22, 2024</span>
             </div>
         </div>
     </div>
